--- a/part2/courseinfo/package.json
+++ b/part2/courseinfo/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
